--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "electron": "^1.8.4",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "robotjs": "^0.5.1"
   }
 }
